# esun_compliance

./: client.py  config.toml  pyproject.toml  requirements.txt  server.py
llm/: ollama.py  vllm.py
output/: check_task_output_16_11_29.json  check_task_output_16_13_51.json  check_task_output_16_22_40.json  check_task_output_16_35_42.json
prompts/check/: check_task_request.json  check_task_request_1.json  check_task_request_4.json  content.txt  system_prompt_scenario.txt  system_prompt_task.txt
prompts/check/scenario/: system_prompt.txt  user_prompt.txt
prompts/correction/: system_prompt.txt  user_prompt.txt
prompts/correction/call/: system_prompt.txt  user_prompt.txt
prompts/correction/meeting/: system_prompt.txt
prompts/correction/social_media/: system_prompt.txt
prompts/correction/stream_and_video/: system_prompt.txt  user_prompt.txt
prompts/summary/call/: system_prompt.txt  user_prompt.txt
prompts/summary/meeting/: system_prompt.txt  user_prompt.txt
